@@ -2,7 +2,9 @@ AUX ext.patch 5065 RMD160 168a521cea56770a9551ef6554d2df57248564e8 SHA1 f20a6ab8
 AUX freenet 416 RMD160 95efeda98fe723027c74729b03fd293ca29bdc7a SHA1 796d336341796d081454ebcc45248e90fffaed91 SHA256 d3b665e8d619d995ef9cb67ed4006c96bc4fdf80e6b7923247e022268ab8bae5
 AUX wrapper.conf.patch 691 RMD160 a4f534fb81d20972d80d16a579a5f493918149d1 SHA1 e280d06f42e310cd96f207f5ffdb28ed18364425 SHA256 354dc64eab82bbc312ac226fab56932da7d7fc085bef2a8eb0092229f112ce1d
 DIST freenet-0.7_rc2_pre1134.tar.bz2 1871620 RMD160 0fb08dcccc7d6d103c24e0f670535698ec263bf7 SHA1 bda22816e2a5c66b89fac8ddb094ba404303a6a2 SHA256 70ea2cc8c761b6f16cf8d4d2d134c484875610b7e2c6a714caa6563d12fa5b34
+DIST seednodes-20080313.fref 27535 RMD160 2883314b483bd98097339b0a3467a5e45674c79d SHA1 a7de43731736ac71c86c7a350512a8f76ac8e9fe SHA256 311c85ede543ded625d981e836fa8e7774e659904de79cdf6a625a8cdab3453e
 DIST wrapper-20080330.conf 1667 RMD160 77c0e4d379521ce10da408dd35ec0ebb5c82f4a9 SHA1 7f8679579c47e2c0644d26c67c26d779bf6f8d75 SHA256 70a98acb43b43b00b45bda40de5745ba188d366dd69c5d97968aa4494b7441f0
 EBUILD freenet-0.7_rc2_pre1134.ebuild 2915 RMD160 6719d55ecebaa1856cae76d5087ab86f8e53bfe5 SHA1 368ce4c72ed8c356ea3c31eca5c79f90e5b2b8bd SHA256 0478c22708303fa5fdd1ba4b05b723d4525640b0c02b45adb784eee9775a3c27
-MISC ChangeLog 6982 RMD160 ec4623f0361b22fe937d7baf278aaeb00ef45032 SHA1 3808cac354063c9172c99774a077548681919cd1 SHA256 1686792bf20bdff0eceda032c6ddf9461d20529ce6cd1fa1774a0252e81bb332
+EBUILD freenet-9999.ebuild 3572 RMD160 7b8289dbdbd7d6ccdee53f2c9cef40bacfbdc8e4 SHA1 ad8440f5204134dde6b825bdb2b87a72b285d96a SHA256 9a15a9136914f30d3b91e8037a716cccca8314a6256143c70a21d93353aa3fa1
+MISC ChangeLog 7102 RMD160 54233eb38989a32fdd9cb6878342ffa1e1902308 SHA1 2c957930c66fd720445c904323ce74d67f012160 SHA256 86033d5f6bdcbdf485c77e05b1b5c88e109279cc60a9e98c27f7b8ab9439f76d
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
