@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  07 Apr 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
+  +freenet-9999.ebuild:
+  Add live ebuild for trunk testers
+
   05 Apr 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
   freenet-0.7_rc2_pre1134.ebuild:
   Some updates + workarounds for amd64
